Fix disabled inputs having white color on iOS

--- a/src/subtitulamos/resources/assets/css/app.css
+++ b/src/subtitulamos/resources/assets/css/app.css
@@ -171,6 +171,7 @@ a:active {
 .disabled * {
   background-color: var(--color-gray-e) !important;
   color: var(--color-gray-c) !important;
+  -webkit-text-fill-color: var(--color-gray-c) !important;
   opacity: 1;
   pointer-events: none;
 }
